Refactor: HttpOnly 방식으로 수정중